modified index.html and style/index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style/index.css" media="screen"/>
+    <title>Jose Dolar </title>
 </head>
 <body>
-    
+    <div class="main_container">
+        <div class="header_and_nav">
+            <h1> Jose Dolar</h1>
+            <div class="nav">
+                <a href=#>Home</a>
+                <a href=#>About</a>
+                <a href=#>Contact</a>
+                <a href=#>Projects</a>
+            </div>
+        </div>
+        </header_and_nav>
+        <div class="name_and_picture_container"> <!-- flex-->
+           <div class="picture">  
+               <img src="https://i.picsum.photos/id/1015/6000/4000.jpg">          
+           </div>
+            <div class="name">
+                <h1>Jose Dolar</h1>
+                <a href=#>My Projects</a>
+                <P>Here are some words about me and my journey in coding. Once opon a time...</P>
+            </div>
+        </div>
+        <div class="project_row1"> <!--flex-->
+               <div class="project">  
+                    <img src="https://picsum.photos/seed/picsum/200/300">
+                    <h2>Project 1</h2>
+               </div> 
+               <div class="project">
+                    <img src="https://i.picsum.photos/id/1014/6016/4000.jpg">
+                    <h2>Project 2</h2>
+               </div> 
+               <div class="project">
+                    <img src="https://i.picsum.photos/id/102/4320/3240.jpg">
+                    <h2>Project 3</h2>
+               </div>
+               <div class="project">
+                    <img src="https://i.picsum.photos/id/1024/1920/1280.jpg">
+                    <h2>Project 4</h2>
+               </div>
+        </div>
+        <div class="project_row2"> <!--flex-->
+            <div class="project">                   
+                <img src="https://i.picsum.photos/id/1025/4951/3301.jpg">
+                <h2>Project 5</h2>
+            </div> 
+            <div class="project">
+                <img src="https://i.picsum.photos/id/1018/3914/2935.jpg">
+                <h2>Project 6</h2>
+            </div> 
+            <div class="project">
+                <img src="https://i.picsum.photos/id/1040/4496/3000.jpg">
+                <h2>Project 7</h2>
+            </div>
+            <div class="project">
+                <img src="https://i.picsum.photos/id/1041/5184/2916.jpg">
+                <h2>Project 8</h2>
+
+            </div>
+        </div>
+        <footer class="footer">
+            <h1>Like what you see?</h1>
+            <a href="#">Contact Me</a>
+        </footer>
+    </div>
 </body>
 </html>
