Added my journey to codding.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
             <div class="name">
                 <h1>Jose Dolar</h1>
                 <a href=#>My Projects</a>
-                <P>Here are some words about me and my journey in coding. Once opon a time...</P>
+                <P>
+                    I learned computer programming when I was in college.  I studied Electrical Engineering and I took the BASIC programming language as an elective course.  I excel in this class that I was hired to work in the university computer laboratory as assistant.  My job was to help fellow student writing and debugging their programming projects.
+                </P>
+                <p>
+                    As a result of my hands-on working experience with computers I got jobs like computer operator, computer programmer and software developer.                    
+                </p>
+
             </div>
         </div>
         <div class="project_row1"> <!--flex-->
