Added responsive design features

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <img src="https://i.picsum.photos/id/1024/1920/1280.jpg">
                     <h2>Project 4</h2>
                </div>
-        </div>
-        <div class="project_row2"> <!--flex-->
+      <!--  </div> -->
+      <!--  <div class="project_row2"> flex-->
             <div class="project">                   
                 <img src="https://i.picsum.photos/id/1025/4951/3301.jpg">
                 <h2>Project 5</h2>
@@ -68,7 +68,6 @@
             <div class="project">
                 <img src="https://i.picsum.photos/id/1041/5184/2916.jpg">
                 <h2>Project 8</h2>
-
             </div>
         </div>
         <footer class="footer">
